docs: add LLMS.txt and MCP server options to quickstart

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -35,6 +35,15 @@ Smithers uses Claude Code's subscription for API access - no separate Anthropic 
 bun add smithers-orchestrator
 ```
 
+### AI Agent Context
+
+Give your coding agent full Smithers documentation:
+
+| Resource | URL | Use Case |
+|----------|-----|----------|
+| LLMS.txt | https://smithers.sh/llms.txt | Paste into agent context |
+| MCP Server | https://smithers.sh/mcp | Add as MCP server in Claude/Cursor |
+
 ## Canonical Workflow
 
 Create `my-workflow.tsx`:
