docs: add VHS tapes for marketing demos + update README with marketing improvements
- Add 10 VHS tape files for generating marketing GIFs
- Plugin-first installation (recommended CTA)
- Outcome-first framing (durability, structure, repo-native, agent-native)
- Add Roadmap section for unimplemented components
- Add Core Primitives table
- Reference GIFs throughout README
- Update quickstart.mdx with demo GIFs

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -7,6 +7,10 @@ description: Get up and running with durable Ralph loops in 2 minutes
 
 **Let your agent write agents.** This guide gets you running in 2 minutes.
 
+<Frame>
+  <img src="/images/01_taro_hello.gif" alt="Hello Smithers demo" />
+</Frame>
+
 ## Prerequisites
 
 <Info>
@@ -247,6 +251,10 @@ try {
 ```
 
 ## Let Claude Write It
+
+<Frame>
+  <img src="/images/02_matcha_plugin.gif" alt="Plugin demo" />
+</Frame>
 
 The real power: **you don't have to write Smithers yourself**. Describe what you want:
 
