docs: fix quickstart issues found during testing
- Add missing 'bun smithers init' step before Hello World
- Fix DB paths to include .db extension (.smithers/hello.db)
- Add 'bun smithers monitor' command option
- Fixes SQLiteError: no such table: main.memories

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -20,7 +20,7 @@ import {
   Claude,
 } from "smithers-orchestrator";
 
-const sqliteDb = createSmithersDB({ path: ".smithers/demo" });
+const sqliteDb = createSmithersDB({ path: ".smithers/demo.db" });
 const executionId = sqliteDb.execution.start("Demo", "demo.tsx");
 
 function Demo() {
